# llm_verbal_skills_trainer

./: .gitignore  README.md  benchmark_results.csv  main.py  pyproject.toml
.gradio/flagged/: dataset1.csv
config/: settings.py  task_tracking.json
src/: conversation.py  evaluation_analysis.py  model_manager.py  olla_setup.py  presentation_assessment.py  skill_training.py  voice_interface.py
tests/: integration_tests.py  unit_tests.py
